--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
   "require": {
     "php": ">=5.6",
     "plokko/firebase-php":"*@dev",
+    "firebase/php-jwt":"^5.0",
     "illuminate/support": "^5.4.0"
   },
   "require-dev": {
@@ -41,6 +42,7 @@
       ],
       "aliases": {
         "FirebaseDb": "Plokko\\LaravelFirebase\\Facades\\FirebaseDb",
+        "FirebaseJWT": "Plokko\\LaravelFirebase\\Facades\\FirebaseJWT",
         "FCM": "Plokko\\LaravelFirebase\\Facades\\FCM"
       }
     }
