--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
   "type": "library",
   "require": {
     "php": ">=5.6",
-    "plokko/firebase-php":"*@dev",
-    "firebase/php-jwt":"^5.0",
+    "plokko/firebase-php":"^0.1.1",
     "illuminate/support": "^5.4.0"
   },
   "require-dev": {
